# sdltemplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md
.cache/clangd/index/: main.cpp.1E4A83F7A00CDC73.idx
data/: config.toml
libs/: CMakeLists.txt
libs/arkogame/: CMakeLists.txt
libs/arkogame/include/arkogame/: arkogame.hpp
libs/arkogame/src/arkogame/: arkogame.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/arkogame/components/: controllerbody.h  physicsbody.h
libs/core/include/core/sdlapp/: sdlapp.h
libs/core/include/core/time/: time.h
libs/core/src/core/arkogame/components/: controllerbody.cpp  physicsbody.cpp
libs/core/src/core/sdlapp/: sdlapp.cpp
libs/events/: CMakeLists.txt
libs/events/include/events/: event.hpp  keys.hpp
libs/events/src/events/: event.cpp
libs/math/: CMakeLists.txt
libs/math/include/math/: time.h  vec.hpp
libs/math/include/math/physics/: collider.h
libs/math/include/math/shapes/: rect.hpp  rectangle.h
libs/math/src/: time.cpp
libs/math/src/math/physics/: collider.cpp
libs/math/src/math/shapes/: rect.cpp  rectangle.cpp
libs/math/src/shapes/: rectangle.cpp
libs/sdlapp/: CMakeLists.txt
libs/sdlapp/include/core/sdlapp/: sdlapp.h
libs/sdlapp/include/sdlapp/: sdlapp.h
libs/sdlapp/src/: sdlapp.cpp
libs/sdlapp/src/core/time/: time.cpp
src/: app_main.cpp  app_main.h  arkogame.cpp  arkogame.h  ball.h  config.cpp  config.h  console_printer.cpp  console_printer.h  game.cpp  game.cpp.bak  game.h  game.h.bak  gamescreens.cpp  gamescreens.h  logging.cpp  logging.h  main.cpp  screens.cpp  screens.h  sdlapp.cpp  sdlapp.h
src/app/: app.cpp  app.h
src/components/: collider.h  hitbox.h  position.h  tags.h  velocity.h
src/screens/: game.cpp  game.h  gameover.cpp  gameover.h  settings.cpp  settings.h  title.cpp  title.h
src/systems/: arenacollision.cpp  arenacollision.h  brickcollision.cpp  brickcollision.h  movement.cpp  movement.h
